--- a/.github/workflows/builddockerfiles.yml
+++ b/.github/workflows/builddockerfiles.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: ${{ vars.AWS_REGION }}
 
       - name: Log in to Amazon ECR
         id: login-ecr
@@ -60,4 +60,16 @@ jobs:
           fi
 
           docker push $IMAGE_URI:${{ github.sha }}  
-     
+
+  notify_failure:
+    name: Notify Failure on Telegram
+    if: failure()
+    runs-on: ubuntu-latest
+    needs: [build-and-push]
+    steps:
+      - name: Send Telegram Message
+        run: |
+          MESSAGE="🚨 GitHub Action Job FAILED\nRepo: ${{ github.repository }}\nBranch: ${{ github.ref }}\nCommit: ${{ github.sha }}\nJob: ${{ github.job }}"
+          curl -s -X POST https://api.telegram.org/bot$TELEGRAM_BOT_TOKEN/sendMessage \
+            -d chat_id=$TELEGRAM_CHAT_ID \
+            -d text="$MESSAGE"          
