--- a/.github/workflows/builddockerfiles.yml
+++ b/.github/workflows/builddockerfiles.yml
@@ -1,12 +1,17 @@
 name: Build and Push to ECR
 
+# on:
+#   push:
+#     branches:
+#       - 'feature/**'
+#     tags:
+#       - 'v*.*.*'
+#   pull_request:
+#     branches:
+#       - master
+      
 on:
   push:
-    branches:
-      - 'feature/**'
-    tags:
-      - 'v*.*.*'
-  pull_request:
     branches:
       - master
 
