--- a/.github/workflows/builddockerfiles.yml
+++ b/.github/workflows/builddockerfiles.yml
@@ -16,6 +16,8 @@ env:
 
 jobs:
   build-and-push:
+    name: Build and push docker image to ECR
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
 
     env:
@@ -61,12 +63,36 @@ jobs:
             docker tag $IMAGE_NAME $IMAGE_URI:$TAG
             docker push $IMAGE_URI:$TAG
           fi
+  
+  deploy-to-ec2:
+    name: Deploy to EC2 on master
+    runs-on: ubuntu-latest
+    needs: build-and-push
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Write SSH key to file
+        run: |
+          echo "${{ secrets.EC2_KEY }}" > ec2_key.pem
+          chmod 600 ec2_key.pem
+
+      - name: Append dummy comment to trigger watcher
+        run: echo "# updated at $(date)" >> docker/docker-compose.yml
+
+      - name: SCP to EC2
+        run: |
+          scp -i ec2_key.pem -o StrictHostKeyChecking=no docker/docker-compose.yml \
+            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:~/docker-compose.yml
+        continue-on-error: true
+                
          
   notify_failure:
     name: Notify Failure on Telegram
     if: failure()
     runs-on: ubuntu-latest
-    needs: [build-and-push]
+    needs: [build-and-push, deploy-to-ec2]
     steps:
       - name: Send Telegram Message
         run: |
