--- a/.github/workflows/builddockerfiles.yml
+++ b/.github/workflows/builddockerfiles.yml
@@ -8,14 +8,14 @@ on:
       - 'v*.*.*'
     paths-ignore:
       - 'docker/**'
-      - '.github/workflows/builddockerfiles.yml'
+      - '.github/workflows/**''
       - '.env'
   pull_request:
     branches:
       - master
     paths-ignore:
       - 'docker/**'
-      - '.github/workflows/builddockerfiles.yml'
+      - '.github/workflows/**''
       - '.env'
 
 env:
