--- a/.github/workflows/deploy_rerun_app.yml
+++ b/.github/workflows/deploy_rerun_app.yml
@@ -44,7 +44,7 @@ jobs:
           scp -i ec2_key.pem -o StrictHostKeyChecking=no docker/docker-compose.yml \
             ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:${{ vars.EC2_PATH_PROJECT }}/docker/docker-compose.yml
 
-          scp -i ec2_key.pem -o StrictHostKeyChecking=no env/.env \
+          scp -i ec2_key.pem -o StrictHostKeyChecking=no .env \
             ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:${{ vars.EC2_PATH_PROJECT }}/.env
         continue-on-error: true
       - name: Run remote deploy script
