--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -24,7 +24,9 @@ services:
       test: ['CMD-SHELL', 'curl -f http://localhost:3333/api/v1/health']
       interval: 10s
       timeout: 5s
-      retries: 5
+      retries: 10
+      start_period: 60s
+
 
   postgres:
     image: docker.io/library/postgres:15
@@ -45,7 +47,7 @@ services:
       test: ['CMD-SHELL', 'pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}']
       interval: 10s
       timeout: 5s
-      retries: 5
+      retries: 10
     volumes:
       - postgres:/var/lib/postgresql/data
 
