--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 name: ghostfolio
 services:
   ghostfolio:
-    image: public.ecr.aws/g6z5u7d0/sergio1981/my-app:latest   
+    image: public.ecr.aws/g6z5u7d0/sergio1981/my-app:latest
     container_name: ghostfolio
     init: true
     cap_drop:
@@ -11,43 +11,33 @@ services:
     env_file:
       - ../.env
     environment:
-      DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?connect_timeout=300&sslmode=prefer
-      REDIS_HOST: ${REDIS_HOST}
-      REDIS_USER: ${REDIS_USER}
+      DATABASE_URL: ${DATABASE_URL}
+      REDIS_HOST: redis
       REDIS_PASSWORD: ${REDIS_PASSWORD}
     ports:
       - 3333:3333
-    depends_on:
-      postgres:
+    depends_on:    
+      redis:
         condition: service_healthy
     healthcheck:
       test: ['CMD-SHELL', 'curl -f http://localhost:3333/api/v1/health']
       interval: 10s
       timeout: 5s
       retries: 5
-
-  postgres:
-    image: docker.io/library/postgres:15
-    container_name: gf-postgres
+  
+  redis:
+    image: docker.io/library/redis:alpine
+    container_name: gf-redis
+    user: '999:1000'
     cap_drop:
       - ALL
-    cap_add:
-      - CHOWN
-      - DAC_READ_SEARCH
-      - FOWNER
-      - SETGID
-      - SETUID
     security_opt:
       - no-new-privileges:true
     env_file:
       - ../.env
+    command: ['redis-server', '--requirepass', $REDIS_PASSWORD]
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}']
+      test: ['CMD-SHELL', 'redis-cli --pass "$REDIS_PASSWORD" ping | grep PONG']
       interval: 10s
       timeout: 5s
       retries: 5
-    volumes:
-      - postgres:/var/lib/postgresql/data
-
-volumes:
-  postgres:
