--- a/.github/workflows/builddockerfiles.yml
+++ b/.github/workflows/builddockerfiles.yml
@@ -115,7 +115,13 @@ jobs:
       - name: Copy .env to EC2
         run: |
           scp -o StrictHostKeyChecking=no -i ec2_key.pem .env ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:${{ vars.EC2_PATH_PROJECT }}/.env  
-        continue-on-error: true       
+        continue-on-error: true  
+        
+      - name: Run remote deploy script
+        run: |
+          ssh -i ec2_key.pem -o StrictHostKeyChecking=no \
+            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} \
+            'bash /home/ubuntu/projects/deploy.sh'       
                 
          
   notify_failure:
