--- a/.github/workflows/deploy_rerun_app.yml
+++ b/.github/workflows/deploy_rerun_app.yml
@@ -8,14 +8,12 @@ on:
         - 'v*.*.*'
       paths:
         - 'docker/**'
-        - '.env'
         - '.github/workflows/**'
     pull_request:
       branches:
         - master
       paths:
         - 'docker/**'
-        - '.env' 
         - '.github/workflows/**'
 
 env:
@@ -39,10 +37,16 @@ jobs:
       - name: Append dummy comment to trigger watcher
         run: echo "# updated at $(date)" >> docker/docker-compose.yml
 
-      - name: SCP docker compose file to EC2
+      - name: Upload docker-compose.yml to S3
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Upload file to S3 bucket
         run: |
-          scp -i ec2_key.pem -o StrictHostKeyChecking=no docker/docker-compose.yml \
-            ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:${{ vars.EC2_PATH_PROJECT }}/docker/docker-compose.yml
+          aws s3 cp docker/docker-compose.yml s3://${{ vars.S3_PATH_TO_COMPOSE_FILE }}/docker-compose.yml
 
       - name: Create .env file
         run: |
@@ -63,13 +67,15 @@ jobs:
 
       - name: Copy .env to EC2
         run: |
-          scp -o StrictHostKeyChecking=no -i ec2_key.pem .env ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:${{ vars.EC2_PATH_PROJECT }}/.env   
+          scp -o StrictHostKeyChecking=no -i ec2_key.pem .env ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:${{ vars.EC2_PATH_PROJECT }}/.env
+        continue-on-error: true       
 
       - name: Run remote deploy script
         run: |
           ssh -i ec2_key.pem -o StrictHostKeyChecking=no \
             ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} \
-            'bash /home/ubuntu/projects/deploy.sh'                  
+            'bash /home/ubuntu/projects/deploy.sh'
+        continue-on-error: true                      
          
   notify_failure:
     name: Notify Failure on Telegram
